Allowing two graalvm versions.